17-go-language-k8s/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-api-lab
  labels:
    app.kubernetes.io/part-of: go-language-module
