17-go-language-k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-task-api
  namespace: go-api-lab
spec:
  ingressClassName: nginx
  rules:
    - host: go-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-task-api
                port:
                  number: 80
